--- a/public/css/app.css
+++ b/public/css/app.css
@@ -177,7 +177,6 @@ body {
 }
 .custom-nav .nav-active b {
   -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
           transform: rotate(180deg);
   -webkit-transition: all 0.2s ease-out 0s;
   transition: all 0.2s ease-out 0s;
@@ -254,4 +253,14 @@ body {
 .table-bordered .checkbox-inline + .checkbox-inline {
   margin-left: 0;
   margin-right: 10px;
+}
+
+div.dataTables_wrapper div#btn {
+  text-align: right;
+}
+
+@media screen and (max-width: 767px) {
+  div.dataTables_wrapper div#btn {
+    text-align: center;
+  }
 }
